# ESXi-Bootstrapper

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: design.py
backend/app/core/: settings.py
backend/app/models/: design.py  responses.py
backend/app/schemas/: design.schema.json
backend/app/services/: planner.py  powercli.py  validation.py
backend/tests/: conftest.py  test_generation.py  test_validation.py
examples/: sample-design.json  sample-powercli.ps1
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: CodeBlock.tsx  StepLayout.tsx  ValidationPanel.tsx
frontend/src/pages/: ResultsPage.tsx  WizardPage.tsx
frontend/src/steps/: EnvironmentStep.tsx  GuestNetworksStep.tsx  HostsStep.tsx  NetworkStep.tsx  ReviewStep.tsx  StorageStep.tsx
frontend/src/types/: design.ts
frontend/src/utils/: defaults.ts  normalizers.ts
