[project]
name = "vsphere-bootstrap-designer-backend"
version = "0.1.0"
description = "FastAPI backend for vSphere Bootstrap Designer"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1"
]

[tool.pytest.ini_options]
pythonpath = ["app", "."]
testpaths = ["tests"]
